# KSearchEngine

./: .gitignore  CMakeLists.txt  main.c
include/core/: indexation.h  logger.h  utils.h
include/data/: cell.h  dict_h.h  dict_s.h  index_matrix.h
include/io/: dir_h.h  dir_s.h  file_reader_s.h
src/: cell.c  dict_h.c  dict_s.c  dir_h.c  dir_s.c  hash_table.c  index_matrix.c  main.c  utils.c
src/core/: indexation.c  logger.c  utils.c
src/data/: cell.c  dict_h.c  dict_s.c  hash_table.c  index_matrix.c
src/include/: cell.h  dict_h.h  dict_s.h  dir_h.h  dir_s.h  file_reader_s.h  hash_table.h  include.h  logger.h  utils.h
src/io/: dir_h.c  dir_s.c  file_reader_s.c
